--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
   </div>
-  <h1>FOLLOW THE SEQUENCE OR DIE 🔥 😈 🔥</h1>
+  <h1>FOLLOW THE SEQUENCE FROM START TO FINISH TO REACH THE NEXT LEVEL.</h1>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
 <script src="game.js"></script>
 </body>
